--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,17 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
+              
             ],
-            "scripts": []
+            "scripts": [
+              "../jquery/dist/jquery.js",
+              "../hammerjs/hammer.js",
+              "../materialize-css/dist/js/materialize.js"
+               
+            ]
           },
           "configurations": {
             "production": {
