--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
-    "@angular/material": "^14.1.0",
+    "@angular/material": "^14.1.1",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.6.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
