começando rotas um pouco mais complexas

--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
-    "materialize-css": "^1.0.0-rc.2",
+    "materialize-angular": "^0.7.10",
+    "materialize-css": "^1.0.0",
     "popper.js": "^1.14.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
