--- a/angular.json
+++ b/angular.json
@@ -23,15 +23,13 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css",
+             
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
               
             ],
             "scripts": [
-              "../jquery/dist/jquery.js",
-              "../hammerjs/hammer.js",
-              "../materialize-css/dist/js/materialize.js"
+            
                
             ]
           },
@@ -98,10 +96,15 @@
               "src/assets"
             ],
             "styles": [
+              "../node_modules/materialize-css/dist/css/materialize.css",
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "../jquery/dist/jquery.js",
+              "../hammerjs/hammer.js",
+              "../materialize-css/dist/js/materialize.js"
+            ]
           }
         }
       }
